# ECS

./: .gitignore  CMakeLists.txt  README.md
Example/: CMakeLists.txt  Main.cpp  TransformComponent.h  TransformHistorySystem.cpp  TransformHistorySystem.h  TransformSystem.h
Examples/: CMakeLists.txt
Examples/DemoScene/: CMakeLists.txt  Main.cpp  PointComponent.h  PointDrawSystem.cpp  PointDrawSystem.h  PointSimulationSystem.cpp  PointSimulationSystem.h  PositionComponent.h  PositionHistoryComponent.h  PositionHistorySystem.h  RectangleComponent.h  RectangleDrawSystem.cpp  RectangleDrawSystem.h  RectangleSimulationSystem.cpp  RectangleSimulationSystem.h  TransformHistorySystem.cpp  TriangleComponent.h  TriangleDrawSystem.cpp  TriangleDrawSystem.h  TriangleSimulationSystem.cpp  TriangleSimulationSystem.h  Utils.cpp  Utils.h
Examples/MultipleLevels/: CMakeLists.txt  CharacterComponent.h  CharacterUpdateSystem.cpp  CharacterUpdateSystem.h  LevelComponent.h  LevelOutputSystem.cpp  LevelOutputSystem.h  Main.cpp
Examples/Simple/: CMakeLists.txt  Main.cpp  TransformComponent.h  TransformHistoryComponent.h  TransformHistorySystem.cpp  TransformHistorySystem.h  TransformSystem.cpp  TransformSystem.h
Include/ECS/: Allocator.h  Assert.h  Bitset.h  CommandBuffer.h  CommandBuffer.inl  Common.h  Component.h  Component.inl  Entity.h  EntityHandle.h  EntityView.h  EntityView.inl  EntityViewConstructor.h  EntityViewConstructor.inl  Group.h  Group.inl  Lock.h  Memory.h  Memory.inl  Query.h  Query.inl  QueryBatch.h  QueryBatch.inl  QueryCache.h  QueryResult.h  QueryResult.inl  System.h  ThreadManager.h  TypeList.h  Utils.h  Utils.inl  Vector.h  World.h  World.inl  WorldTLS.h  WorldView.h  WorldView.inl
Source/: Assert.h  Bitset.h  CommandBuffer.cpp  CommandBuffer.h  CommandBuffer.inl  Common.cpp  Common.h  Component.cpp  Component.h  Component.inl  Entity.h  EntityView.inl  EntityViewConstructor.h  Group.cpp  Group.h  Group.inl  Query.cpp  Query.inl  World.cpp  World.inl  WorldTLS.cpp  WorldTLS.h  WorldView.inl
Tests/: CMakeLists.txt
Tests/TestApp/: App.cpp
Tests/Tests/: Added.cpp  BackReference.cpp  CheckCtorDtor.cpp  Common.h  ComplexCommands.cpp  ComponentData.cpp  Excluded.cpp  Optional.cpp  Query.cpp  Removed.cpp  ViewConstructor.cpp
